Update ErrorHandler.java